--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,6 @@ jobs:
         with:
           node-version: '11'
           cache: 'npm'
+      - run: npm uninstall --save newrelic
       - run: npm install
       - run: npm run build
